see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

14-Jan-2012 Jean-Marie Simonet
 $ [#27720] Remove unused strings from en-GB.com_finder.sys.ini. Thanks Michael
 # [#27676] SQL Server - Fix MySQL Specific Query in administrator/includes/application.php. Thanks Michael
 $ [#27589] id or ID inconsistency. Thanks Brian.
 ^ Deleting more "$ Id $"

13-Jan-2012 Christophe Demko
 ^ Updating copyright
 ^ Deleting remaining "$ Id $"

13-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files ar-AA, gd-GB
 # [#27707] *Regression: Debug on breaks template assignments to menu items.
 $ Updating installation ini file th-TH
 $ Updating installation ini file ru-RU

12-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files fa-IR, hr-HR, pl-PL, pt-PT
 ^ Changing Version # to 2.5 for updated installation lang xml
 ^ Updating Copyright in xml files.
 ^ Updating Copyright in administrator folder
 ^ Updating Copyright
 ^ Updating <version>1.7.0</version> to 2.5.0
 ^ Updating version="1.7" to 2.5
 # Normalizing index.html files
 ^ Updating en-GB.xml files
 ^ Deleting "$ Id $". Thanks Rouven.
 # Correcting some EOL
 $ Updating installation ini files nb-NO, nn-NO, ro-RO
 # Adding misssing index.html files. Thanks Rouven.
 # [#27117] More autoformatting fixes. Thanks Rouven.

-------------------- 2.5.0 Beta2 Release [11-Jan-2012] ------------------

11-Jan-2012 Mark Dexter
 # [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias"

11-Jan-2012 Christophe Demko
 ^ Merge branch 'platform114' of git://github.com/realityking/joomla-cms

11-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini file be-BY