@@ -176,7 +176,7 @@ CREATE TABLE `#__categories` (
   `title` varchar(255) NOT NULL,
   `alias` varchar(255) CHARACTER SET utf8 COLLATE utf8_bin NOT NULL default '',
   `note` varchar(255) NOT NULL default '',
-  `description` mediumtext NOT NULL default '',
+  `description` mediumtext NOT NULL,
   `published` tinyint(1) NOT NULL default '0',
   `checked_out` int(11) unsigned NOT NULL default '0',
   `checked_out_time` datetime NOT NULL default '0000-00-00 00:00:00',
@@ -1098,7 +1098,7 @@ CREATE TABLE `#__languages` (
   `description` varchar(512) NOT NULL,
   `metakey` text NOT NULL,
   `metadesc` text NOT NULL,
-  `sitename` varchar(1024) NOT NULL,
+  `sitename` varchar(1024) NOT NULL default '',
   `published` int(11) NOT NULL default '0',
   `ordering` int(11) NOT NULL default '0',
   PRIMARY KEY  (`lang_id`),
