@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Jan-2012 Christophe Demko
+ # [#27712] Errors in joomla.sql
+ 
 14-Jan-2012 Jean-Marie Simonet
  $ [#27720] Remove unused strings from en-GB.com_finder.sys.ini. Thanks Michael
  # [#27676] SQL Server - Fix MySQL Specific Query in administrator/includes/application.php. Thanks Michael
